--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,18 @@
             <artifactId>spring-data-jpa</artifactId>
             <version>1.3.4.RELEASE</version>
         </dependency>
+
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>1.1.0.Final</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>5.0.1.Final</version>
+        </dependency>
     </dependencies>
 
 </project>
